# ai-web-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  index.html  pyproject.toml
.github/workflows/: backend.yaml
ai_web_app/: main.py
notebooks/: proof_of_concept.ipynb
tests/: conftest.py  test_app.py  test_main.py
tests/assets/: articles.csv  sections.csv
