[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-web-app"
description = 'An example AI web app'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel Ferreira", email = "daniel.ferreira.1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "txtai[similarity]==5.3.0",
  "loguru==0.6.0",
  "fastapi==0.92.0",
  "uvicorn[standard]==0.20.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/ai-web-app-2#readme"
Issues = "https://github.com/unknown/ai-web-app-2/issues"
Source = "https://github.com/unknown/ai-web-app-2"

[tool.hatch.version]
path = "ai_web_app/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "ruff",
  "mypy",
  "pre-commit",
  "pandas",
  "pytest-xprocess",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ai_web_app --cov=tests {args}"
no-cov = "cov --no-cov {args}"
integration = "no-cov -m integration -x"
lint = ["ruff .", "black . --check -q", "isort . --check -q"]
format = ["black .", "isort ."]
types = "mypy ."
serve = "uvicorn app:app --port 8080"
build = "docker buildx build . -t ai-web-app:latest"
serve-docker = ["docker run -p 5000:8080 ai-web-app:latest"]
build-embeddings = ["python ai_web_app/main.py"]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ai_web_app/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--strict-markers -m \"not integration\""
markers = [
    "integration: slow tests, shouldn't be run so often"
]
